@@ -794,11 +794,22 @@ int handle__connect(struct mosquitto *context)
 						rc = MOSQ_ERR_AUTH;
 						goto handle_connect_error;
 					}
+					const char *new_username;
 #if OPENSSL_VERSION_NUMBER < 0x10100000L
-					context->username = mosquitto__strdup((char *) ASN1_STRING_data(name_asn1));
+					new_username = (const char *) ASN1_STRING_data(name_asn1);
 #else
-					context->username = mosquitto__strdup((char *) ASN1_STRING_get0_data(name_asn1));
+					new_username = (const char *) ASN1_STRING_get0_data(name_asn1);
 #endif
+					if(mosquitto_validate_utf8(new_username, (int)strlen(new_username))){
+						if(context->protocol == mosq_p_mqtt5){
+							send__connack(context, 0, MQTT_RC_BAD_USERNAME_OR_PASSWORD, NULL);
+						}else{
+							send__connack(context, 0, CONNACK_REFUSED_BAD_USERNAME_PASSWORD, NULL);
+						}
+						X509_free(client_cert);
+						return MOSQ_ERR_AUTH;
+					}
+					context->username = mosquitto__strdup(new_username);
 					if(!context->username){
 						if(context->protocol == mosq_p_mqtt5){
 							send__connack(context, 0, MQTT_RC_SERVER_UNAVAILABLE, NULL);
