@@ -1,5 +1,7 @@
 Security:
-- Broker will reject Will messages that attempt to publish to $CONTROL/.
+- Broker will now reject Will messages that attempt to publish to $CONTROL/.
+- Broker now validates usernames provided in a TLS certificate or TLS-PSK
+  identity are valid UTF-8.
 
 Broker:
 - Fix $SYS messages being expired after 60 seconds and hence unchanged values
